--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+*
+!/**/
+!*.*
 *.o
 *.csv
 *.json
@@ -7,7 +10,5 @@ PyAlChemy/run_data/*
 */ALCHEMY
 *.pairs
 *.log
-notebooks/*
-*
-!/**/
-!*.*
+notebooks/*.ipynb
+*.ipynb_checkpoints
